--- a/emacs.org
+++ b/emacs.org
@@ -1619,11 +1619,7 @@ org-babel languages & automatic yasnippet creation
 
 (setq org-babel-default-header-args:sh '((:results . "output"))
       org-babel-default-header-args:shell '((:results . "output"))
-      org-babel-default-header-args:bash '((:results . "output"))
-      org-babel-default-header-args:js '((:results . "output")) ;; doesn't work with "value" for some reason, it just prints "undefined"
-      org-babel-default-header-args:python '((:results . "output")) ;; doesn't work with "value" for some reason, it just prints "None"
-      org-babel-default-header-args:ruby '((:results . "output"))
-      )
+      org-babel-default-header-args:bash '((:results . "output")))
 #+END_SRC
 
 support =cmd= function in org-babel and =cmd= org link
