Revert "Simplify package installs"
This reverts commit 15a3303e6f3885e1f65ca8233bdcf18104402e8f.

--- a/emacs.org
+++ b/emacs.org
@@ -22,117 +22,124 @@ Now, start emacs.
 * packages
 
 #+BEGIN_SRC emacs-lisp
-(pkg 'gnu-elpa-keyring-update)
+(use-package gnu-elpa-keyring-update)
 
-(pkg 'afternoon-theme)
+(use-package afternoon-theme)
 
-(pkg 'beacon)
-(beacon-mode 1)
-(setq beacon-blink-when-window-scrolls nil)
-(setq beacon-blink-when-window-changes t)
-(setq beacon-blink-when-buffer-changes t)
+(use-package beacon
+  :config (progn
+            (beacon-mode 1)
+            (setq beacon-blink-when-window-scrolls nil)
+            (setq beacon-blink-when-window-changes t)
+            (setq beacon-blink-when-buffer-changes t)))
 
-(pkg 'dash)
-(pkg 'pcache)
-(pkg 'f)
-(pkg 's)
-(defalias 's-empty? 's-blank?)
-(defalias 's-nonempty? 's-present?)
-(defalias 's-nonempty-or-nil 's-presence)
+(use-package dash)
+(use-package pcache)
+(use-package f)
+(use-package s
+  :config (progn
+            (defalias 's-empty? 's-blank?)
+            (defalias 's-nonempty? 's-present?)
+            (defalias 's-nonempty-or-nil 's-presence)))
 
-(pkg 'yaml)
+(use-package yaml)
 
-(pkg 'helpful)
-(fset 'describe-key 'helpful-key)
-(fset 'describe-function 'helpful-callable)
-(fset 'describe-variable 'helpful-variable)
-(fset 'describe-symbol 'helpful-symbol)
+(use-package helpful
+  :config (progn
+            (fset 'describe-key 'helpful-key)
+            (fset 'describe-function 'helpful-callable)
+            (fset 'describe-variable 'helpful-variable)
+            (fset 'describe-symbol 'helpful-symbol)))
 
-(pkg 'which-key)
-(which-key-mode)
+(use-package which-key
+  :config (which-key-mode))
 
-(pkg 'magit) ;; brings in transient
-(pkg 'transient)
+(use-package magit) ;; brings in transient
+(use-package transient)
 
-(pkg 'verb)
-(define-key verb-command-map (kbd "C-r") #'verb-send-request-on-point)
-(define-key verb-command-map (kbd "C-s") #'verb-send-request-on-point-other-window-stay)
-(define-key verb-command-map (kbd "C-f") #'verb-send-request-on-point-other-window)
-(define-key verb-response-body-mode-map (kbd "C-c C-r C-r") #'verb-re-send-request)
-(define-key verb-response-body-mode-map (kbd "C-c C-r C-h") #'verb-toggle-show-headers)
+(use-package verb
+  :config (progn
+            (define-key verb-command-map (kbd "C-r") #'verb-send-request-on-point)
+            (define-key verb-command-map (kbd "C-s") #'verb-send-request-on-point-other-window-stay)
+            (define-key verb-command-map (kbd "C-f") #'verb-send-request-on-point-other-window)
+            (define-key verb-response-body-mode-map (kbd "C-c C-r C-r") #'verb-re-send-request)
+            (define-key verb-response-body-mode-map (kbd "C-c C-r C-h") #'verb-toggle-show-headers)))
 
-(pkg 'browse-at-remote)
+(use-package browse-at-remote)
 
-(pkg 'expand-region)
+(use-package expand-region)
 
-(pkg 'multiple-cursors)
-(defun mc/prompt-for-inclusion-in-whitelist (original-command)
-  "Rewrite of `mc/prompt-for-inclusion-in-whitelist' to not ask yes/no for every newly seen command."
-  (add-to-list 'mc/cmds-to-run-for-all original-command)
-  (mc/save-lists)
-  t)
+(use-package multiple-cursors
+  :config (progn
+            (defun mc/prompt-for-inclusion-in-whitelist (original-command)
+              "Rewrite of `mc/prompt-for-inclusion-in-whitelist' to not ask yes/no for every newly seen command."
+              (add-to-list 'mc/cmds-to-run-for-all original-command)
+              (mc/save-lists)
+              t)))
 
-(pkg 'smartparens)
-(require 'smartparens-config)
-(smartparens-global-mode t)
+(use-package smartparens
+  :config (progn
+            (require 'smartparens-config)
+            (smartparens-global-mode t)))
 
-(pkg 'yasnippet)
-(pkg 'yasnippet-snippets)
+(use-package yasnippet)
+(use-package yasnippet-snippets)
 
-(pkg 'counsel) ;; brings in ivy & swiper
-(pkg 'counsel-projectile)
+(use-package counsel) ;; brings in ivy & swiper
+(use-package counsel-projectile)
 
-(pkg 'wgrep)
-(setq wgrep-auto-save-buffer t)
+(use-package wgrep
+  :config (setq wgrep-auto-save-buffer t))
 
-(pkg 'undo-tree)
-(global-undo-tree-mode)
+(use-package undo-tree
+  :config (global-undo-tree-mode))
 
-(pkg 'dumb-jump)
-(setq dumb-jump-prefer-searcher 'rg)
-;; todo emacs 28.1 -- dumb-jump xref backend and use M-. instead of M-s j -- I can install an updated xref from elpa, but I'm too lazy to switch this now.
-;; :config (lambda ()
-;;           (add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
-;;           (setq xref-show-definitions-function #'xref-show-definitions-completing-read) ;; requires xref 1.1.0 on emacs 28.1
-;;           )
+(use-package dumb-jump
+  :config (setq dumb-jump-prefer-searcher 'rg)
+  ;; todo emacs 28.1 -- dumb-jump xref backend and use M-. instead of M-s j
+  ;; :config (lambda ()
+  ;;           (add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
+  ;;           (setq xref-show-definitions-function #'xref-show-definitions-completing-read) ;; requires xref 1.1.0 on emacs 28.1
+  ;;           )
+  )
 
-(pkg 'editorconfig)
-(editorconfig-mode 1)
+(use-package editorconfig
+  :config (editorconfig-mode 1))
 
-(pkg 'nodejs-repl)
+(use-package nodejs-repl)
 
-(pkg 'yaml-mode)
+(use-package yaml-mode)
 
-(pkg 'markdown-mode)
-(add-to-list 'auto-mode-alist '("\\.md$" . gfm-mode))
-(add-to-list 'auto-mode-alist '("\\.markdown$" . gfm-mode))
+(use-package markdown-mode
+  :mode (("\\.md$" . gfm-mode)
+         ("\\.markdown$" . gfm-mode)))
 
-(pkg 'dockerfile-mode)
+(use-package dockerfile-mode)
 
-(pkg 'scala-mode)
-(pkg 'sbt-mode)
+(use-package scala-mode)
+(use-package sbt-mode)
 
-(pkg 'typescript-mode)
+(use-package typescript-mode)
 
-(pkg 'go-mode)
-(pkg 'ob-go)
-(add-hook 'before-save-hook 'gofmt-before-save)
+(use-package go-mode
+  :config (add-hook 'before-save-hook 'gofmt-before-save))
+(use-package ob-go)
 
-(pkg 'ob-mongo)
+(use-package ob-mongo)
 
-(pkg 'coffee-mode)
-(setq coffee-tab-width 2)
+(use-package coffee-mode
+  :config (setq coffee-tab-width 2))
 
-(pkg 'terraform-mode)
-(add-to-list 'auto-mode-alist '("\\.tfstate$" . js-mode))
+(use-package terraform-mode
+  :mode ("\\.tfstate$" . js-mode))
 
-(pkg 'protobuf-mode)
+(use-package protobuf-mode)
 
-(pkg 'groovy-mode)
-(add-to-list 'auto-mode-alist '("Jenkinsfile$" . groovy-mode))
+(use-package groovy-mode
+  :mode ("Jenkinsfile$" . groovy-mode))
 
-(pkg 'jsonnet-mode)
-(add-to-list 'auto-mode-alist '("\\.libsonnet\\'" . jsonnet-mode))
+(use-package jsonnet-mode
+  :mode ("\\.libsonnet\\'" . jsonnet-mode))
 #+END_SRC
 
 * helper functions
