--- a/emacs.org
+++ b/emacs.org
@@ -26,61 +26,55 @@ Now, start emacs.
 
 (use-package afternoon-theme)
 
-(use-package beacon
-  :config (progn
-            (beacon-mode 1)
-            (setq beacon-blink-when-window-scrolls nil)
-            (setq beacon-blink-when-window-changes t)
-            (setq beacon-blink-when-buffer-changes t)))
+(use-package beacon)
+(beacon-mode 1)
+(setq beacon-blink-when-window-scrolls nil
+      beacon-blink-when-window-changes t
+      beacon-blink-when-buffer-changes t)
 
 (use-package dash)
 (use-package pcache)
 (use-package f)
-(use-package s
-  :config (progn
-            (defalias 's-empty? 's-blank?)
-            (defalias 's-nonempty? 's-present?)
-            (defalias 's-nonempty-or-nil 's-presence)))
+(use-package s)
+(defalias 's-empty? 's-blank?)
+(defalias 's-nonempty? 's-present?)
+(defalias 's-nonempty-or-nil 's-presence)
 
 (use-package yaml)
 
-(use-package helpful
-  :config (progn
-            (fset 'describe-key 'helpful-key)
-            (fset 'describe-function 'helpful-callable)
-            (fset 'describe-variable 'helpful-variable)
-            (fset 'describe-symbol 'helpful-symbol)))
+(use-package helpful)
+(fset 'describe-key 'helpful-key)
+(fset 'describe-function 'helpful-callable)
+(fset 'describe-variable 'helpful-variable)
+(fset 'describe-symbol 'helpful-symbol)
 
-(use-package which-key
-  :config (which-key-mode))
+(use-package which-key)
+(which-key-mode)
 
 (use-package magit) ;; brings in transient
 (use-package transient)
 
-(use-package verb
-  :config (progn
-            (define-key verb-command-map (kbd "C-r") #'verb-send-request-on-point)
-            (define-key verb-command-map (kbd "C-s") #'verb-send-request-on-point-other-window-stay)
-            (define-key verb-command-map (kbd "C-f") #'verb-send-request-on-point-other-window)
-            (define-key verb-response-body-mode-map (kbd "C-c C-r C-r") #'verb-re-send-request)
-            (define-key verb-response-body-mode-map (kbd "C-c C-r C-h") #'verb-toggle-show-headers)))
+(use-package verb)
+(define-key verb-command-map (kbd "C-r") #'verb-send-request-on-point)
+(define-key verb-command-map (kbd "C-s") #'verb-send-request-on-point-other-window-stay)
+(define-key verb-command-map (kbd "C-f") #'verb-send-request-on-point-other-window)
+(define-key verb-response-body-mode-map (kbd "C-c C-r C-r") #'verb-re-send-request)
+(define-key verb-response-body-mode-map (kbd "C-c C-r C-h") #'verb-toggle-show-headers)
 
 (use-package browse-at-remote)
 
 (use-package expand-region)
 
-(use-package multiple-cursors
-  :config (progn
-            (defun mc/prompt-for-inclusion-in-whitelist (original-command)
-              "Rewrite of `mc/prompt-for-inclusion-in-whitelist' to not ask yes/no for every newly seen command."
-              (add-to-list 'mc/cmds-to-run-for-all original-command)
-              (mc/save-lists)
-              t)))
+(use-package multiple-cursors)
+(defun mc/prompt-for-inclusion-in-whitelist (original-command)
+  "Rewrite of `mc/prompt-for-inclusion-in-whitelist' to not ask yes/no for every newly seen command."
+  (add-to-list 'mc/cmds-to-run-for-all original-command)
+  (mc/save-lists)
+  t)
 
-(use-package smartparens
-  :config (progn
-            (require 'smartparens-config)
-            (smartparens-global-mode t)))
+(use-package smartparens)
+(require 'smartparens-config)
+(smartparens-global-mode t)
 
 (use-package yasnippet)
 (use-package yasnippet-snippets)
@@ -88,31 +82,30 @@ Now, start emacs.
 (use-package counsel) ;; brings in ivy & swiper
 (use-package counsel-projectile)
 
-(use-package wgrep
-  :config (setq wgrep-auto-save-buffer t))
+(use-package wgrep)
+(setq wgrep-auto-save-buffer t)
 
-(use-package undo-tree
-  :config (global-undo-tree-mode))
+(use-package undo-tree)
+(global-undo-tree-mode)
 
-(use-package dumb-jump
-  :config (setq dumb-jump-prefer-searcher 'rg)
-  ;; todo emacs 28.1 -- dumb-jump xref backend and use M-. instead of M-s j
-  ;; :config (lambda ()
-  ;;           (add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
-  ;;           (setq xref-show-definitions-function #'xref-show-definitions-completing-read) ;; requires xref 1.1.0 on emacs 28.1
-  ;;           )
-  )
+(use-package dumb-jump)
+(setq dumb-jump-prefer-searcher 'rg)
+;; todo emacs 28.1 -- dumb-jump xref backend and use M-. instead of M-s j
+;; :config (lambda ()
+;;           (add-hook 'xref-backend-functions #'dumb-jump-xref-activate)
+;;           (setq xref-show-definitions-function #'xref-show-definitions-completing-read) ;; requires xref 1.1.0 on emacs 28.1
+;;           )
 
-(use-package editorconfig
-  :config (editorconfig-mode 1))
+(use-package editorconfig)
+(editorconfig-mode 1)
 
 (use-package nodejs-repl)
 
 (use-package yaml-mode)
 
-(use-package markdown-mode
-  :mode (("\\.md$" . gfm-mode)
-         ("\\.markdown$" . gfm-mode)))
+(use-package markdown-mode)
+(add-to-list 'auto-mode-alist '("\\.md$" . gfm-mode))
+(add-to-list 'auto-mode-alist '("\\.markdown$" . gfm-mode))
 
 (use-package dockerfile-mode)
 
@@ -121,25 +114,25 @@ Now, start emacs.
 
 (use-package typescript-mode)
 
-(use-package go-mode
-  :config (add-hook 'before-save-hook 'gofmt-before-save))
+(use-package go-mode)
 (use-package ob-go)
+(add-hook 'before-save-hook 'gofmt-before-save)
 
 (use-package ob-mongo)
 
-(use-package coffee-mode
-  :config (setq coffee-tab-width 2))
+(use-package coffee-mode)
+(setq coffee-tab-width 2)
 
-(use-package terraform-mode
-  :mode ("\\.tfstate$" . js-mode))
+(use-package terraform-mode)
+(add-to-list 'auto-mode-alist '("\\.tfstate$" . js-mode))
 
 (use-package protobuf-mode)
 
-(use-package groovy-mode
-  :mode ("Jenkinsfile$" . groovy-mode))
+(use-package groovy-mode)
+(add-to-list 'auto-mode-alist '("Jenkinsfile$" . groovy-mode))
 
-(use-package jsonnet-mode
-  :mode ("\\.libsonnet\\'" . jsonnet-mode))
+(use-package jsonnet-mode)
+(add-to-list 'auto-mode-alist '("\\.libsonnet\\'" . jsonnet-mode))
 #+END_SRC
 
 * helper functions
