switch ivy-resume to M-z

--- a/emacs.org
+++ b/emacs.org
@@ -1774,7 +1774,7 @@ support =gist= and =gist+raw= org links
    ("C-csc" counsel-find-file--sbt-compile-action "sbt compile in pwd")))
 
 (global-set-key (kbd "M-x") 'counsel-M-x)
-(global-set-key (kbd "C-M-x") 'ivy-resume)
+(global-set-key (kbd "M-z") 'ivy-resume)
 (define-key ivy-minibuffer-map (kbd "C-o") 'ivy-dispatching-done)
 (define-key ivy-minibuffer-map (kbd "M-o") 'ivy-dispatching-done-ivy)
 (global-set-key (kbd "C-x C-f") 'counsel-find-file-dwim)
