--- a/emacs.org
+++ b/emacs.org
@@ -1207,6 +1207,7 @@ argument makes the windows rotate backwards."
 (define-key sp-keymap (kbd "C-M-p") nil)
 (define-key sp-keymap (kbd "C-M-n") nil)
 (global-set-key (kbd "C-x C-d") 'dired)
+(global-set-key (kbd "C-x d") 'cd)
 (define-key dired-mode-map (kbd "C-x C-q") 'wdired-change-to-wdired-mode)
 (define-key dired-mode-map (kbd "w") 'wdired-change-to-wdired-mode)
 (define-key dired-mode-map (kbd "<tab>") 'dired-hide-subdir-dwim)
