--- a/emacs.org
+++ b/emacs.org
@@ -1195,7 +1195,7 @@ argument makes the windows rotate backwards."
 (global-set-key (kbd "C-<tab>") 'indent-region-or-buffer)
 (global-set-key (kbd "C-M-<tab>") 'jw-pulse-text)
 (global-set-key (kbd "C-M-S-<tab>") 'beacon-blink)
-(global-set-key (kbd "C-M-;") 'just-one-space)
+(global-set-key (kbd "C-M-;") 'cycle-spacing) ;; just-one-space is at S-M-<space>
 (global-set-key (kbd "M-;") 'comment-dwim-dwim)
 (global-set-key (kbd "C-=") 'er/expand-region)
 (global-set-key (kbd "C-+") 'er/contract-region)
